--- a/admin/view/template/localisation/location_form.twig
+++ b/admin/view/template/localisation/location_form.twig
@@ -25,63 +25,94 @@
       </div>
       <div class="panel-body">
         <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-location" class="form-horizontal">
-          <div class="form-group required">
-            <label class="col-sm-2 control-label" for="input-name">{{ entry_name }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="name" value="{{ name }}" placeholder="{{ entry_name }}" id="input-name" class="form-control" />
-              {% if error_name %}
-              <div class="text-danger">{{ error_name }}</div>
-              {% endif %}
+
+          {# Language tabs #}
+          <div class="tab-content">
+            <div class="tab-pane active" id="tab-general">
+              <ul class="nav nav-tabs" id="language">
+                {% for language in languages %}
+                  <li {% if loop.first %} class="active" {% endif %}>
+                    <a href="#language{{ language.language_id }}" data-toggle="tab">
+                      <img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" /> {{ language.name }}
+                    </a>
+                  </li>
+                {% endfor %}
+              </ul>
+              <div class="tab-content">
+
+                {% for language in languages %}
+                  <div class="tab-pane {% if loop.first %} active {% endif %}" id="language{{ language.language_id }}">
+                    <div class="form-group required">
+                      <label class="col-sm-2 control-label" for="input-name">{{ entry_name }}</label>
+                      <div class="col-sm-10">
+                        <input type="text" name="name" value="{{ name }}" placeholder="{{ entry_name }}" id="input-name" class="form-control" />
+                        {% if error_name %}
+                        <div class="text-danger">{{ error_name }}</div>
+                        {% endif %}
+                      </div>
+                    </div>
+                    <div class="form-group required">
+                      <label class="col-sm-2 control-label" for="input-address">{{ entry_address }}</label>
+                      <div class="col-sm-10">
+                        <textarea type="text" name="address" placeholder="{{ entry_address }}" rows="5" id="input-address" class="form-control">{{ address }}</textarea>
+                        {% if error_address %}
+                        <div class="text-danger">{{ error_address }}</div>
+                      {% endif %}
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-sm-2 control-label" for="input-geocode"><span data-toggle="tooltip" data-container="#content" title="{{ help_geocode }}">{{ entry_geocode }}</span></label>
+                      <div class="col-sm-10">
+                        <input type="text" name="geocode" value="{{ geocode }}" placeholder="{{ entry_geocode }}" id="input-geocode" class="form-control" />
+                      </div>
+                    </div>
+                    <div class="form-group required">
+                      <label class="col-sm-2 control-label" for="input-telephone">{{ entry_telephone }}</label>
+                      <div class="col-sm-10">
+                        <input type="text" name="telephone" value="{{ telephone }}" placeholder="{{ entry_telephone }}" id="input-telephone" class="form-control" />
+                        {% if error_telephone %}
+                        <div class="text-danger">{{ error_telephone }}</div>
+                        {% endif %}
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-sm-2 control-label" for="input-fax">{{ entry_fax }}</label>
+                      <div class="col-sm-10">
+                        <input type="text" name="fax" value="{{ fax }}" placeholder="{{ entry_fax }}" id="input-fax" class="form-control" />
+                      </div>
+                    </div>          
+                    <div class="form-group">
+                      <label class="col-sm-2 control-label" for="input-image">{{ entry_image }}</label>
+                      <div class="col-sm-10"><a href="" id="thumb-image" data-toggle="image" class="img-thumbnail"><img src="{{ thumb }}" alt="" title="" data-placeholder="{{ placeholder }}" /></a>
+                        <input type="hidden" name="image" value="{{ image }}" id="input-image" />
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-sm-2 control-label" for="input-open"><span data-toggle="tooltip" data-container="#content" title="{{ help_open }}">{{ entry_open }}</span></label>
+                      <div class="col-sm-10">
+                        <textarea name="open" rows="5" placeholder="{{ entry_open }}" id="input-open" class="form-control">{{ open }}</textarea>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-sm-2 control-label" for="input-map"><span data-toggle="tooltip" data-container="#content" title="{{ help_map }}">{{ entry_map }}</span></label>
+                      <div class="col-sm-10">
+                        <textarea name="map" rows="5" placeholder="{{ entry_map }}" id="input-map" class="form-control">{{ map }}</textarea>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-sm-2 control-label" for="input-comment"><span data-toggle="tooltip" data-container="#content" title="{{ help_comment }}">{{ entry_comment }}</span></label>
+                      <div class="col-sm-10">
+                        <textarea name="comment" rows="5" placeholder="{{ entry_comment }}" id="input-comment" class="form-control">{{ comment }}</textarea>
+                      </div>
+                    </div>
+                  </div>
+                {% endfor %}
+
+
+              </div>
             </div>
           </div>
-          <div class="form-group required">
-            <label class="col-sm-2 control-label" for="input-address">{{ entry_address }}</label>
-            <div class="col-sm-10">
-              <textarea type="text" name="address" placeholder="{{ entry_address }}" rows="5" id="input-address" class="form-control">{{ address }}</textarea>
-              {% if error_address %}
-              <div class="text-danger">{{ error_address }}</div>
-             {% endif %}
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-geocode"><span data-toggle="tooltip" data-container="#content" title="{{ help_geocode }}">{{ entry_geocode }}</span></label>
-            <div class="col-sm-10">
-              <input type="text" name="geocode" value="{{ geocode }}" placeholder="{{ entry_geocode }}" id="input-geocode" class="form-control" />
-            </div>
-          </div>
-          <div class="form-group required">
-            <label class="col-sm-2 control-label" for="input-telephone">{{ entry_telephone }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="telephone" value="{{ telephone }}" placeholder="{{ entry_telephone }}" id="input-telephone" class="form-control" />
-              {% if error_telephone %}
-              <div class="text-danger">{{ error_telephone }}</div>
-              {% endif %}
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-fax">{{ entry_fax }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="fax" value="{{ fax }}" placeholder="{{ entry_fax }}" id="input-fax" class="form-control" />
-            </div>
-          </div>          
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-image">{{ entry_image }}</label>
-            <div class="col-sm-10"><a href="" id="thumb-image" data-toggle="image" class="img-thumbnail"><img src="{{ thumb }}" alt="" title="" data-placeholder="{{ placeholder }}" /></a>
-              <input type="hidden" name="image" value="{{ image }}" id="input-image" />
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-open"><span data-toggle="tooltip" data-container="#content" title="{{ help_open }}">{{ entry_open }}</span></label>
-            <div class="col-sm-10">
-              <textarea name="open" rows="5" placeholder="{{ entry_open }}" id="input-open" class="form-control">{{ open }}</textarea>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-comment"><span data-toggle="tooltip" data-container="#content" title="{{ help_comment }}">{{ entry_comment }}</span></label>
-            <div class="col-sm-10">
-              <textarea name="comment" rows="5" placeholder="{{ entry_comment }}" id="input-comment" class="form-control">{{ comment }}</textarea>
-            </div>
-          </div>
+
         </form>
       </div>
     </div>
