--- a/admin/view/template/catalog/information_form.twig
+++ b/admin/view/template/catalog/information_form.twig
@@ -4,19 +4,34 @@
     <div class="container-fluid">
       <div class="pull-right">
         <button type="submit" form="form-information" data-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary"><i class="fa fa-save"></i></button>
-        <a href="{{ cancel }}" data-toggle="tooltip" title="{{ button_cancel }}" class="btn btn-default"><i class="fa fa-reply"></i></a></div>
-      <h1>{{ heading_title }}</h1>
+        <a 
+          href="{{ cancel }}" 
+          data-toggle="tooltip" 
+          title="{{ button_cancel }}" 
+          class="btn btn-default">
+          <i class="fa fa-reply"></i>
+        </a>
+      </div>
+      <h1>
+        {{ heading_title }}
+      </h1>
       <ul class="breadcrumb">
         {% for breadcrumb in breadcrumbs %}
-        <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
+        <li>
+          <a href="{{ breadcrumb.href }}">
+            {{ breadcrumb.text }}
+          </a>
+        </li>
         {% endfor %}
       </ul>
     </div>
   </div>
-  <div class="container-fluid">{% if error_warning %}
-    <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}
-      <button type="button" class="close" data-dismiss="alert">&times;</button>
-    </div>
+
+  <div class="container-fluid">
+    {% if error_warning %}
+      <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+      </div>
     {% endif %}
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -37,59 +52,119 @@
                 <li><a href="#language{{ language.language_id }}" data-toggle="tab"><img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" /> {{ language.name }}</a></li>
                 {% endfor %}
               </ul>
-              <div class="tab-content">{% for language in languages %}
-                <div class="tab-pane" id="language{{ language.language_id }}">
-				  <div class="form-group required">
-                    <label class="col-sm-2 control-label" for="input-title{{ language.language_id }}">{{ entry_title }}</label>
-                    <div class="col-sm-10">
-                      <input 
-                        type="text" 
-                        name="information_description[{{ language.language_id }}][title]" 
-                        value="{{ information_description[language.language_id] ? information_description[language.language_id].title }}" 
-                        placeholder="{{ entry_title }}" 
-                        id="input-title{{ language.language_id }}" 
-                        class="form-control" 
-                        onchange="seoUrlFill(this.value,'information','{{ language.code|slice(0,2)|lower }}',{{ language.language_id }});"
+
+              <div class="tab-content">
+                {% for language in languages %}
+                  <div class="tab-pane" id="language{{ language.language_id }}">
+                    
+                    <div class="form-group required">
+                      <label class="col-sm-2 control-label" for="input-title{{ language.language_id }}">{{ entry_title }}</label>
+                      <div class="col-sm-10">
+                        <input 
+                          type="text" 
+                          name="information_description[{{ language.language_id }}][title]" 
+                          value="{{ information_description[language.language_id] ? information_description[language.language_id].title }}" 
+                          placeholder="{{ entry_title }}" 
+                          id="input-title{{ language.language_id }}" 
+                          class="form-control" 
+                          onchange="seoUrlFill(this.value,'information','{{ language.code|slice(0,2)|lower }}',{{ language.language_id }});"
                         />
-                      {% if error_title[language.language_id] %}
-                      <div class="text-danger">{{ error_title[language.language_id] }}</div>
-                      {% endif %} </div>
-				  </div>
-				  <div class="form-group">
-                    <label class="col-sm-2 control-label" for="input-meta-h1{{ language.language_id }}">{{ entry_meta_h1 }}</label>
-                    <div class="col-sm-10">
-                      <input type="text" name="information_description[{{ language.language_id }}][meta_h1]" value="{{ information_description[language.language_id] ? information_description[language.language_id].meta_h1 }}" placeholder="{{ entry_meta_h1 }}" id="input-meta-h1{{ language.language_id }}" class="form-control" />
-					</div>
-				  </div>
-				  <div class="form-group">
-                    <label class="col-sm-2 control-label" for="input-meta-title{{ language.language_id }}">{{ entry_meta_title }}</label>
-                    <div class="col-sm-10">
-                      <input type="text" name="information_description[{{ language.language_id }}][meta_title]" value="{{ information_description[language.language_id] ? information_description[language.language_id].meta_title }}" placeholder="{{ entry_meta_title }}" id="input-meta-title{{ language.language_id }}" class="form-control" />
-					</div>
-				  </div>
-                  <div class="form-group">
-                    <label class="col-sm-2 control-label" for="input-meta-description{{ language.language_id }}">{{ entry_meta_description }}</label>
-                    <div class="col-sm-10">
-                      <textarea name="information_description[{{ language.language_id }}][meta_description]" rows="5" placeholder="{{ entry_meta_description }}" id="input-meta-description{{ language.language_id }}" class="form-control">{{ information_description[language.language_id] ? information_description[language.language_id].meta_description }}</textarea>
+                        {% if error_title[language.language_id] %}
+                          <div class="text-danger">{{ error_title[language.language_id] }}</div>
+                        {% endif %} 
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="col-sm-2 control-label" for="input-meta-h1{{ language.language_id }}">{{ entry_meta_h1 }}</label>
+                        <div class="col-sm-10">
+                          <input 
+                            type="text" 
+                            name="information_description[{{ language.language_id }}][meta_h1]" 
+                            value="{{ information_description[language.language_id] ? information_description[language.language_id].meta_h1 }}" 
+                            placeholder="{{ entry_meta_h1 }}" 
+                            id="input-meta-h1{{ language.language_id }}" 
+                            class="form-control" 
+                          />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="col-sm-2 control-label" for="input-meta-title{{ language.language_id }}">
+                        {{ entry_meta_title }}
+                      </label>
+                      <div class="col-sm-10">
+                        <input 
+                          type="text" 
+                          name="information_description[{{ language.language_id }}][meta_title]" 
+                          value="{{ information_description[language.language_id] ? information_description[language.language_id].meta_title }}" 
+                          placeholder="{{ entry_meta_title }}" 
+                          id="input-meta-title{{ language.language_id }}" 
+                          class="form-control" 
+                        />
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="col-sm-2 control-label" for="input-meta-description{{ language.language_id }}">
+                        {{ entry_meta_description }}
+                      </label>
+                      <div class="col-sm-10">
+                        <textarea 
+                          name="information_description[{{ language.language_id }}][meta_description]" 
+                          rows="5" 
+                          placeholder="{{ entry_meta_description }}" 
+                          id="input-meta-description{{ language.language_id }}" 
+                          class="form-control">
+                            {{ information_description[language.language_id] ? information_description[language.language_id].meta_description }}
+                        </textarea>
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="col-sm-2 control-label" for="input-meta-keyword{{ language.language_id }}">
+                        {{ entry_meta_keyword }}
+                      </label>
+                      <div class="col-sm-10">
+                        <textarea 
+                          name="information_description[{{ language.language_id }}][meta_keyword]" 
+                          rows="5" 
+                          placeholder="{{ entry_meta_keyword }}" 
+                          id="input-meta-keyword{{ language.language_id }}" 
+                          class="form-control">
+                            {{ information_description[language.language_id] ? information_description[language.language_id].meta_keyword }}
+                        </textarea>
+                      </div>
+                    </div>
+
+                    <div class="form-group required">
+                      <label class="col-sm-2 control-label" for="input-description{{ language.language_id }}">
+                        {{ entry_description }}
+                      </label>
+                      <div class="col-sm-10">
+                        <textarea 
+                          name="information_description[{{ language.language_id }}][description]" 
+                          placeholder="{{ entry_description }}" 
+                          id="input-description{{ language.language_id }}" 
+                          data-toggle="summernote" 
+                          data-lang="{{ summernote }}" 
+                          class="form-control">
+                            {{ information_description[language.language_id] ? information_description[language.language_id].description }}
+                        </textarea>
+
+                        {% if error_description[language.language_id] %}
+                          <div class="text-danger">
+                            {{ error_description[language.language_id] }}
+                          </div>
+                        {% endif %} 
+                      </div>
                     </div>
                   </div>
-                  <div class="form-group">
-                    <label class="col-sm-2 control-label" for="input-meta-keyword{{ language.language_id }}">{{ entry_meta_keyword }}</label>
-                    <div class="col-sm-10">
-                      <textarea name="information_description[{{ language.language_id }}][meta_keyword]" rows="5" placeholder="{{ entry_meta_keyword }}" id="input-meta-keyword{{ language.language_id }}" class="form-control">{{ information_description[language.language_id] ? information_description[language.language_id].meta_keyword }}</textarea>
-                    </div>
-                  </div>
-                  <div class="form-group required">
-                    <label class="col-sm-2 control-label" for="input-description{{ language.language_id }}">{{ entry_description }}</label>
-                    <div class="col-sm-10">
-                      <textarea name="information_description[{{ language.language_id }}][description]" placeholder="{{ entry_description }}" id="input-description{{ language.language_id }}" data-toggle="summernote" data-lang="{{ summernote }}" class="form-control">{{ information_description[language.language_id] ? information_description[language.language_id].description }}</textarea>
-                      {% if error_description[language.language_id] %}
-                      <div class="text-danger">{{ error_description[language.language_id] }}</div>
-                      {% endif %} </div>
-                  </div>
-                </div>
-                {% endfor %}</div>
+                {% endfor %}
+              </div>
             </div>
+
+
             <div class="tab-pane" id="tab-data">
               <div class="form-group">
                 <label class="col-sm-2 control-label">{{ entry_store }}</label>
