--- a/admin/view/template/catalog/information_list.twig
+++ b/admin/view/template/catalog/information_list.twig
@@ -37,21 +37,27 @@
               <thead>
                 <tr>
                   <td style="width: 1px;" class="text-center"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', this.checked);" /></td>
-                  <td class="text-left">{% if sort == 'id.title' %}
-                    <a href="{{ sort_title }}" class="{{ order|lower }}">{{ column_title }}</a>
+                  <td class="text-left">
+                    {% if sort == 'id.title' %}
+                      <a href="{{ sort_title }}" class="{{ order|lower }}">{{ column_title }}</a>
                     {% else %}
-                    <a href="{{ sort_title }}">{{ column_title }}</a>
-                    {% endif %}</td>
-                  <td class="text-right">{% if sort == 'i.sort_order' %}
-                    <a href="{{ sort_sort_order }}" class="{{ order|lower }}">{{ column_sort_order }}</a>
+                      <a href="{{ sort_title }}">{{ column_title }}</a>
+                    {% endif %}
+                  </td>
+                  <td class="text-right">
+                    {% if sort == 'i.sort_order' %}
+                      <a href="{{ sort_sort_order }}" class="{{ order|lower }}">{{ column_sort_order }}</a>
                     {% else %}
-                    <a href="{{ sort_sort_order }}">{{ column_sort_order }}</a>
-                    {% endif %}</td>
-				  <td class="text-right">{% if sort == 'i.noindex' %}
-                    <a href="{{ sort_noindex }}" class="{{ order|lower }}">{{ column_noindex }}</a>
-                    {% else %}
-                    <a href="{{ sort_noindex }}">{{ column_noindex }}</a>
-					{% endif %}</td>
+                      <a href="{{ sort_sort_order }}">{{ column_sort_order }}</a>
+                    {% endif %}
+                  </td>
+				            <td class="text-right">
+                      {% if sort == 'i.noindex' %}
+                        <a href="{{ sort_noindex }}" class="{{ order|lower }}">{{ column_noindex }}</a>
+                      {% else %}
+                        <a href="{{ sort_noindex }}">{{ column_noindex }}</a>
+                      {% endif %}
+                    </td>
                   <td class="text-right">{{ column_action }}</td>
                 </tr>
               </thead>
