--- a/admin/view/template/localisation/location_list.twig
+++ b/admin/view/template/localisation/location_list.twig
@@ -35,33 +35,51 @@
               <thead>
                 <tr>
                   <td style="width: 1px;" class="text-center"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', this.checked);" /></td>
-                  <td class="text-left">{% if sort == 'name' %}
-                    <a href="{{ sort_name }}" class="{{ order|lower }}">{{ column_name }}</a>
+                  <td class="text-right">{{ column_image }}</td>
+                  <td class="text-left">
+                    {% if sort == 'name' %}
+                      <a href="{{ sort_name }}" class="{{ order|lower }}">{{ column_name }}</a>
                     {% else %}
-                    <a href="{{ sort_name }}">{{ column_name }}</a>
-                    {% endif %}</td>
-                  <td class="text-left">{% if sort == 'address' %}
-                    <a href="{{ sort_address }}" class="{{ order|lower }}">{{ column_address }}</a>
+                      <a href="{{ sort_name }}">{{ column_name }}</a>
+                    {% endif %}
+                  </td>
+                  <td class="text-left">
+                    {% if sort == 'address' %}
+                      <a href="{{ sort_address }}" class="{{ order|lower }}">{{ column_address }}</a>
                     {% else %}
-                    <a href="{{ sort_address }}">{{ column_address }}</a>
-                    {% endif %}</td>
+                      <a href="{{ sort_address }}">{{ column_address }}</a>
+                    {% endif %}
+                  </td>
+                  <td class="text-left">
+                    {% if sort == 'sort_order' %}
+                      <a href="{{ sort_order }}" class="{{ order|lower }}">{{ column_sort_order }}</a>
+                    {% else %}
+                      <a href="{{ sort_order }}">{{ column_sort_order }}</a>
+                    {% endif %}
+                  </td>
+                  <td class="text-right">{{ column_phone }}</td>
                   <td class="text-right">{{ column_action }}</td>
                 </tr>
               </thead>
               <tbody>
                 {% if locations %}
-                {% for location in locations %}
-                <tr>
-                  <td class="text-center">{% if location.location_id in selected %}
-                    <input type="checkbox" name="selected[]" value="{{ location.location_id }}" checked="checked" />
-                    {% else %}
-                    <input type="checkbox" name="selected[]" value="{{ location.location_id }}" />
-                    {% endif %}</td>
-                  <td class="text-left">{{ location.name }}</td>
-                  <td class="text-left">{{ location.address }}</td>
-                  <td class="text-right"><a href="{{ location.edit }}" data-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa fa-pencil"></i></a></td>
-                </tr>
-                {% endfor %}
+                  {% for location in locations %}
+                    <tr>
+                      <td class="text-center">
+                        {% if location.location_id in selected %}
+                          <input type="checkbox" name="selected[]" value="{{ location.location_id }}" checked="checked" />
+                        {% else %}
+                          <input type="checkbox" name="selected[]" value="{{ location.location_id }}" />
+                        {% endif %}
+                      </td>
+                      <td class="text-left"><img src="{{ location.image }}" width="80" height="auto"/></td>
+                      <td class="text-left">{{ location.name }}</td>
+                      <td class="text-left">{{ location.address }}</td>
+                      <td class="text-left">{{ location.telephone }}</td>
+                      <td class="text-left">{{ location.sort_order }}</td>
+                      <td class="text-right"><a href="{{ location.edit }}" data-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa fa-pencil"></i></a></td>
+                    </tr>
+                  {% endfor %}
                 {% else %}
                 <tr>
                   <td class="text-center" colspan="4">{{ text_no_results }}</td>
