--- a/catalog/view/theme/helium/template/common/footer.twig
+++ b/catalog/view/theme/helium/template/common/footer.twig
@@ -2,8 +2,8 @@
 <footer>
     
       {% if informations %}
-      <div class="flex">
-        <span class="h5 row">{{ text_information }}</span>
+      <div class="flex flex-wrap">
+        <span class="h5 flex-1-0-100">{{ text_information }}</span>
         {% for row in informations|batch(informations|length / 4|round(1, 'ceil')) %}
         <div class="flex">
           <ul class="list-unstyled">
