--- a/admin/view/template/localisation/location_list.twig
+++ b/admin/view/template/localisation/location_list.twig
@@ -50,6 +50,8 @@
                       <a href="{{ sort_address }}">{{ column_address }}</a>
                     {% endif %}
                   </td>
+                  <td class="text-right">{{ column_phone }}</td>
+
                   <td class="text-left">
                     {% if sort == 'sort_order' %}
                       <a href="{{ sort_order }}" class="{{ order|lower }}">{{ column_sort_order }}</a>
@@ -57,7 +59,6 @@
                       <a href="{{ sort_order }}">{{ column_sort_order }}</a>
                     {% endif %}
                   </td>
-                  <td class="text-right">{{ column_phone }}</td>
                   <td class="text-right">{{ column_action }}</td>
                 </tr>
               </thead>
@@ -72,7 +73,7 @@
                           <input type="checkbox" name="selected[]" value="{{ location.location_id }}" />
                         {% endif %}
                       </td>
-                      <td class="text-left"><img src="{{ location.image }}" width="80" height="auto"/></td>
+                      <td class="text-center"><img src="{{ location.image }}" width="160" height="auto"/></td>
                       <td class="text-left">{{ location.name }}</td>
                       <td class="text-left">{{ location.address }}</td>
                       <td class="text-left">{{ location.telephone }}</td>
