MOD: Twig templates to animate price

--- a/catalog/view/theme/helium/template/product/product.twig
+++ b/catalog/view/theme/helium/template/product/product.twig
@@ -112,7 +112,7 @@
       {# Кнопки купить #}
       <div class="form-group">
         <label class="control-label" for="input-quantity">{{ entry_qty }}</label>
-        <input type="text" name="quantity" value="{{ minimum }}" size="2" id="input-quantity" class="form-control" />
+        <input type="number" name="quantity" value="{{ minimum }}" size="2" id="input-quantity" class="form-control" oninput="animatePrice(this)"/>
         <input type="hidden" name="product_id" value="{{ product_id }}" />
       </div>
       <div class="btn-group">
