--- a/catalog/view/theme/helium/css/stylesheet.css
+++ b/catalog/view/theme/helium/css/stylesheet.css
@@ -238,9 +238,22 @@ span.price-new {
 }
 
 .prices > span {
-	display: flex;
-	flex: 1 0 100%;
-	justify-content: center;
+	/* display: flex; */
+	/* flex: 0; */
+	/* justify-content: center; */
+	padding: 0 0.25rem;
+}
+
+span.price-value {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.prices.h3 {
+    display: flex;
+    flex: 0 1 100px;
+    justify-content: center;
+    align-items: flex-end;
 }
 .flags {
     position: absolute;
