--- a/catalog/view/theme/helium/template/common/cart_select_options.twig
+++ b/catalog/view/theme/helium/template/common/cart_select_options.twig
@@ -1,4 +1,5 @@
 <h1 class="product-name">{{ name }}</h1>
+{{ json_prices }}
 <div class="row">
   <div class="left-side">
   {% if image %}
@@ -13,7 +14,7 @@
       {% endif %}
       <div class="form-group">
         <label class="control-label" for="input-quantity">{{ entry_qty }}</label>
-        <input type="text" name="quantity" value="{{ minimum }}" size="2" id="input-quantity" class="form-control" />
+        <input type="number" name="quantity" value="{{ minimum }}" size="2" id="input-quantity" class="form-control" oninput="animatePrice(this)"/>
         <input type="hidden" name="product_id" value="{{ product_id }}" />
       </div>
       {% if price %}
