--- a/catalog/view/theme/helium/template/product/product_miniature.twig
+++ b/catalog/view/theme/helium/template/product/product_miniature.twig
@@ -1,5 +1,5 @@
 <article class="miniature"{% if wishlist %} data-wishlist="{{ wishlist }} "{% endif %} {% if compare %} data-compare="{{ compare }} "{% endif %}>
-  <figure class="image">
+  <figure class="image" {% if product.special_date_end %}data-special-date-end="{{ product.special_date_end }}"{% endif %}>
     <a title="{{ product.name }}" href="{{ product.href }}">
       <img decoding="async" loading="lazy" src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" width="{{product.width}}" height="{{product.height}}" class="img-responsive" />
     </a>
@@ -24,8 +24,9 @@
           {% if not product.special %}
             <span class="text-price">{{ text_price }}</span> {{ product.price }}
           {% else %} 
-            <span>{{ text_new_price }}<span class="price-new" {% if product.special_date_end %}data-special-date-end="{{ product.special_date_end }}"{% endif %}>{{ product.special }}</span> </span>
-            <span class="price-old">{{ text_old_price }} {{ product.price }}</span> 
+            <span class="text-price">{{ text_new_price }}</span>
+            <span class="price-new">{{ product.special }}</span>
+            <span class="price-old"><span class="text-price">{{ text_old_price }}</span> {{ product.price }}</span> 
           {% endif %}
           {% if product.tax %} 
             <span class="price-tax">{{ text_tax }} {{ product.tax }}</span> 
