UPD: Move some image settings from theme to general

--- a/admin/view/template/extension/theme/helium.twig
+++ b/admin/view/template/extension/theme/helium.twig
@@ -159,7 +159,7 @@
               </div>
             </div>
           </fieldset>
-          
+
           <fieldset>
             <legend>{{ text_image }}</legend>
             <div class="form-group required">
@@ -201,10 +201,10 @@
               <div class="col-sm-10">
                 <div class="row">
                   <div class="col-sm-6">
-                    <input type="text" name="theme_helium_image_thumb_width" value="{{ theme_helium_image_thumb_width }}" placeholder="{{ entry_width }}" id="input-image-thumb-width" class="form-control" />
+                    <input type="text" name="image_thumb_width" value="{{ image_thumb_width }}" placeholder="{{ entry_width }}" id="input-image-thumb-width" class="form-control" />
                   </div>
                   <div class="col-sm-6">
-                    <input type="text" name="theme_helium_image_thumb_height" value="{{ theme_helium_image_thumb_height }}" placeholder="{{ entry_height }}" class="form-control" />
+                    <input type="text" name="image_thumb_height" value="{{ image_thumb_height }}" placeholder="{{ entry_height }}" class="form-control" />
                   </div>
                 </div>
                 {% if error_image_thumb %}
@@ -218,10 +218,10 @@
               <div class="col-sm-10">
                 <div class="row">
                   <div class="col-sm-6">
-                    <input type="text" name="theme_helium_image_popup_width" value="{{ theme_helium_image_popup_width }}" placeholder="{{ entry_width }}" id="input-image-popup-width" class="form-control" />
+                    <input type="text" name="image_popup_width" value="{{ image_popup_width }}" placeholder="{{ entry_width }}" id="input-image-popup-width" class="form-control" />
                   </div>
                   <div class="col-sm-6">
-                    <input type="text" name="theme_helium_image_popup_height" value="{{ theme_helium_image_popup_height }}" placeholder="{{ entry_height }}" class="form-control" />
+                    <input type="text" name="image_popup_height" value="{{ image_popup_height }}" placeholder="{{ entry_height }}" class="form-control" />
                   </div>
                 </div>
                 {% if error_image_popup %}
@@ -250,10 +250,10 @@
               <div class="col-sm-10">
                 <div class="row">
                   <div class="col-sm-6">
-                    <input type="text" name="theme_helium_image_additional_width" value="{{ theme_helium_image_additional_width }}" placeholder="{{ entry_width }}" id="input-image-additional-width" class="form-control" />
+                    <input type="text" name="image_additional_width" value="{{ image_additional_width }}" placeholder="{{ entry_width }}" id="input-image-additional-width" class="form-control" />
                   </div>
                   <div class="col-sm-6">
-                    <input type="text" name="theme_helium_image_additional_height" value="{{ theme_helium_image_additional_height }}" placeholder="{{ entry_height }}" class="form-control" />
+                    <input type="text" name="image_additional_height" value="{{ image_additional_height }}" placeholder="{{ entry_height }}" class="form-control" />
                   </div>
                 </div>
                 {% if error_image_additional %}
