UPD: Microdata for static filter pages

--- a/catalog/view/theme/helium/template/product/category.twig
+++ b/catalog/view/theme/helium/template/product/category.twig
@@ -2,7 +2,7 @@
 {# Microdata #}
 {# EAN is used as GTIN, it's OK #}
 <!-- Microdata -->
-{% if microdata is defined and microdata.show == true %}
+{% if microdata is defined %}
   <script type="application/ld+json">
     {{ microdata }}
   </script>
