UPD: Little fix for search styles, remove console.log()

--- a/catalog/view/theme/helium/css/stylesheet.css
+++ b/catalog/view/theme/helium/css/stylesheet.css
@@ -1150,6 +1150,7 @@ header span.product-count:not(:empty) {
 	position: absolute;
 	left: 0;
 	top: 100%;
+	width: 100%;
 	z-index: 1;
 	background-color: var(--background-blocks);
 	max-height: 0;
